--- a/public/index.html
+++ b/public/index.html
@@ -16,46 +16,100 @@
         body {
             margin-top: 50px;
         }
+        textarea {
+            resize: none;
+        }
+        .well {
+            -webkit-box-sizing: padding-box;
+            -moz-box-sizing: padding-box;
+            box-sizing: padding-box;
+            background: #89CFF0;
+            padding: 10px 20px;
+        }
+        #messageArea {
+            display: none;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="well">
-                    <h3>Online users</h3>
-                    <ul class="list-group" id="users">
-
-                    </ul>
+<div class="container">
+    <div id="userFormArea" class="row">
+        <div class="col-md-12">
+            <form id="userForm">
+                <div class="form-group">
+                    <label>
+                        Enter username
+                    </label>
+                    <input type="text" class="form-control" id="username">
+                    <br>
+                    <input type="submit" class="btn btn-primary" value="Log in">
                 </div>
-            </div>
-            <div class="col-md-8">
-                <div class="chat" id="chat"></div>
-                <form id="messageForm">
-                    <div class="form-group">
-                        <label>
-                            Enter message
-                        </label>
-                        <textarea class="form-control" id="message"></textarea>
-                        <br>
-                        <input type="submit" class="btn btn-primary" value="Send">
-                    </div>
-                </form>
-            </div>
+            </form>
         </div>
     </div>
+</div>
+
+<div id="messageArea" class="row">
+    <div class="col-md-4">
+        <div class="well">
+            <h3>Online users</h3>
+            <ul class="list-group" id="users"></ul>
+        </div>
+    </div>
+    <div class="col-md-8">
+        <div id="chat" class="chat"></div>
+
+        <form class="messageForm">
+            <div class="form-group">
+                <label for="message">Enter message</label>
+                <textarea id="message" class="form-control"></textarea>
+                <br>
+                <input type="submit" class="btn btn-primary" value="Send message">
+            </div>
+        </form>
+    </div>
+</div>
 
     <script>
         $(function () {
-            var socket       = io.connect();
-            var $messageForm = $('#messageForm');
-            var $message     = $('#message');
-            var $chat        = $('#chat');
+            var socket        = io.connect();
+            var $messageForm  = $('#messageForm');
+            var $message      = $('#message');
+            var $chat         = $('#chat');
+            var $userForm     = $('#userForm');
+            var $userFormArea = $('#userFormArea');
+            var $messageArea  = $('#messageArea');
+            var $users        = $('#users');
+            var $username     = $('#username');
 
             $messageForm.submit(function (e) {
                 e.preventDefault();
                 socket.emit('send message', $message.val());
                 $message.val('');
+            });
+
+            socket.on('new message', function (data) {
+                $chat.append('<div class="well"><strong>: ' + data.user + '</strong>' + data.msg + '</div>')
+            });
+
+            $userForm.submit(function (e) {
+                e.preventDefault();
+                socket.emit('new user', $username.val(), function (data) {
+                    if(data) {
+                        $userFormArea.hide();
+                        $messageArea.show();
+                    }
+                });
+                $username.val('');
+            });
+
+            socket.on('get users', function (data) {
+                var html = '';
+                for(i = 0; i < data.    length; i++) {
+                    html += '<li class="list-group-item">' + data[i] + '</li>';
+                }
+
+                $users.html(html);
             });
         })
     </script>
